--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@
 		<title>dang it</title>
 	</head>
 	<body>
-		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/da2r5L9azaA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/da2r5L9azaA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	</body>
 </html>
