this is a disaster

--- a/404.html
+++ b/404.html
@@ -5,7 +5,11 @@ permalink: /404.html
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<title>dang it</title>
+		<title id="hell">dang it</title>
+		<script>
+			var words = ["failure","dang it","sorry","whooooops","aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa","</title><p>butt</p>"];
+			document.getElementById("hell").innerHTML = words[Math.floor(Math.random() * words.length)];
+		</script>
 	</head>
 	<body>
 		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/da2r5L9azaA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
