self deprication is fun

--- a/404.html
+++ b/404.html
@@ -13,5 +13,8 @@ permalink: /404.html
 	</head>
 	<body>
 		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/da2r5L9azaA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<h1>how did you get here</h1>
+		<p>i thought my site worked well</p>
+		<a href="https://thev360.github.io/">return to the working part of the site</a>
 	</body>
 </html>
