--- a/includeZone.html
+++ b/includeZone.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 {% include head1.html %}Include Zone{% include head2.html %}<p>test of includes
 		</p>
 {% include footer.html %}
