--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8" />
-		<title>V360's site</title>
-	</head>
-	<body>
+---
+layout: null
+---
+{% include head1.html %}Include Zone{% include head2.html %}
 		<h1>my site</h1>
 		<a href="CreateFour/">Create Four</a>
-	</body>
-</html>
+{% include footer.html %}
