--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 ---
 layout: null
 ---
-{% include head1.html %}Include Zone{% include head2.html %}
-		<h1>my site</h1>
-		<a href="CreateFour/">Create Four</a>
+{% include head1.html %}V360's site{% include head2.html %}
+		<h1>Welcome to my site</h1>
+		<p>Hello, I'm V360. I'm a fan of programming in SmileBASIC, PICO-8, and Love2D, but I also sometimes make projects like these ones listed below. I hope you like them</p>
+		<ul>
+			<li><a href="CreateFour/">Create Four</a> - Interactive Connect Four Game</li>
+			<li>More soon?</li>
+		</ul>
+		<p><a href="https://github.com/TheV360">Github Profile</a></p>
 {% include footer.html %}
