--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: null
 ---
 {% include head1.html %}V360's site{% include head2.html %}
-		<h1>Welcome to my site</h1>
+		<h1 id="typing">Welcome to my site</h1>
 		<p>Hello, I'm V360. I'm a fan of programming in SmileBASIC, PICO-8, and Love2D, but I also sometimes make projects like these ones listed below. I hope you like them</p>
 		<br />
 		<ul>
