--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ layout: null
 		<p>Hello, I'm V360. I'm a fan of programming in SmileBASIC, PICO-8, and Love2D, but I also sometimes make projects like these ones listed below. I hope you like them</p>
 		<br />
 		<ul>
-			<li><a href="CreateFour/">Create Four</a> - Interactive Connect Four Game</li>
+			<li><a href="CreateFour/">Create Four</a> - Interactive Connect Four Box Art</li>
+			<li>NoEffort10s - Top Ten List Generator - Coming soon!</li>
 			<li>More soon?</li>
 		</ul>
 		<br />
