--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@ layout: null
 		<br />
 		<ul>
 			<li><a href="CreateFour/">Create Four</a> - Interactive Connect Four Box Art</li>
-			<li>NoEffort10s - Top Ten List Generator - Coming soon!</li>
-			<li>More soon?</li>
+			<li>Internet Trash Can - Throw Some Images In The Trash - Coming soon!</li>
+			<li>NoEffort10s - Top Ten List Generator - Coming soon???</li>
+		</ul>
+		<br />
+		<h2>Non-github stuff</h2>
+		<ul>
+			<li>REALLY GREAT RPG - A Parody of Miiverse RPGs - SmileBASIC Key: MKSKX4R6</li>
 		</ul>
 		<br />
 		<a href="https://github.com/TheV360">Github Profile</a>
