--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: null
 		<br />
 		<ul>
 			<li><a href="CreateFour/">Create Four</a> - Interactive Connect Four Box Art</li>
-			<li>Internet Trash Can - Throw Some Images In The Trash - Coming soon!</li>
+			<li><a href="InternetTrashCan/">Internet Trash Can</a> - Throw Some Images In The Trash</li>
 			<li>NoEffort10s - Top Ten List Generator - Coming soon???</li>
 		</ul>
 		<br />
