--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@ permalink: /404.html
 			var words = ["failure","dang it","sorry","whooooops","aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa","what the heck"];
 			document.getElementsByTagName("title")[0].innerHTML = words[Math.floor(Math.random() * words.length)];
 		</script>
-		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/da2r5L9azaA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-		<h1>how did you get here</h1>
+		<h1 id="typing">How did you get here</h1>
+		<iframe src="https://www.youtube-nocookie.com/embed/da2r5L9azaA?rel=0&amp;controls=0&amp;showinfo=0" style="width: 100%; height: auto;" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		<p>i thought my site worked well</p>
 		<a href="https://thev360.github.io/">return to the working part of the site</a>
 {% include footer.html %}
