--- a/404.html
+++ b/404.html
@@ -5,9 +5,15 @@ permalink: /404.html
 {% include head1.html %}404{% include head2.html %}
 		<h1 id="typing"></h1>
 		<script>
+			// random title
 			var words = ["failure","dang it","sorry","whooooops","aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa","what the heck"];
 			document.getElementsByTagName("title")[0].innerHTML = words[Math.floor(Math.random() * words.length)];
-			document.getElementById("typing").innerHTML = window.location.pathname.substring(1) + " isn't on my site, sorry.";
+			
+			// sorry, not on my site!
+			var url = window.location.pathname.substring(1);
+			try { url = decodeURI(url); }
+			if (url.match(/<[a-z][\s\S]*>/gim)) url = "This URL XSS vulnerability";
+			document.getElementById("typing").innerHTML = url + " isn't on my site, sorry.";
 		</script>
 		<iframe src="https://www.youtube-nocookie.com/embed/da2r5L9azaA?rel=0&amp;controls=0&amp;showinfo=0" style="width: 100%; height: auto;" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		<p>how did you get here, i thought my site worked well</p>
