--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: null
 			<li><a href="CreateFour/">Create Four</a> - Interactive Connect Four Box Art</li>
 			<li><a href="InternetTrashCan/">Internet Trash Can</a> - Throw Some Images In The Trash</li>
 			<li>NoEffort10s - Top Ten List Generator - Coming soon???</li>
-			<li><a href="NewTab/">NewTab</a> - Better new tab page, modern ａｅｓｔｈｅｔｉｃ</li>
+			<li><a href="NewerTab/">NewerTab</a> - Better new tab page, modern ａｅｓｔｈｅｔｉｃ <a href="NewTab/">(also, here's the awful older version)</a></li>
 		</ul>
 		<br />
 		<h2>Non-github stuff</h2>
