--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@ permalink: /404.html
 			if (url.match(/<[a-z][\s\S]*>/gim)) url = "This URL XSS vulnerability";
 			document.getElementById("typing").innerHTML = url + " isn't on my site, sorry.";
 		</script>
-		<iframe src="https://www.youtube-nocookie.com/embed/da2r5L9azaA?rel=0&amp;controls=0&amp;showinfo=0" style="width: 100%; height: auto;" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<!--<iframe src="https://www.youtube-nocookie.com/embed/da2r5L9azaA?rel=0&amp;controls=0&amp;showinfo=0" style="width: 100%; height: auto;" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>-->
 		<p>how did you get here, i thought my site worked well</p>
 		<a href="https://thev360.github.io/">return to the working part of the site</a>
 {% include footer.html %}
