removed stuff, added new stuff.
cool, some self-promotion

--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@ layout: null
 		<p>Hello, I'm V360. I'm a fan of programming in SmileBASIC, PICO-8, and Love2D, but I also sometimes make projects like these ones listed below. I hope you like them</p>
 		<br />
 		<ul>
-			<li><a href="CreateFour/">Create Four</a> - Interactive Connect Four Box Art</li>
+			<li><a href="CreateFour/">Create Four</a> - Interactive Connect Four Box Art (<a href="https://www.reddit.com/r/me_irl/comments/7w06uq/meirl/">Reddit (21.1k votes)</a>, <a href="https://twitter.com/ItMeIRL/status/961447744568266752">Twitter (1,485 likes)</a>)</li>
 			<li><a href="InternetTrashCan/">Internet Trash Can</a> - Throw Some Images In The Trash</li>
-			<li>NoEffort10s - Top Ten List Generator - Coming soon???</li>
-			<li><a href="NewerTab/">NewerTab</a> - Better new tab page, modern ａｅｓｔｈｅｔｉｃ <a href="NewTab/">(also, here's the awful older version)</a></li>
+			<li><a href="NewerTab/">NewerTab</a> - Better new tab page, modern ａｅｓｔｈｅｔｉｃ (also, here's the <a href="NewTab/">awful older version</a>)</li>
 		</ul>
 		<br />
 		<h2>Non-github stuff</h2>
 		<ul>
 			<li>REALLY GREAT RPG - A Parody of Miiverse RPGs - SmileBASIC Key: MKSKX4R6</li>
 		</ul>
+		<br />
+		<h2>Site overhaul</h2>
+		<p>
+			Soon I'm gonna fix my dang site. It'll have some better styling.
+		</p>
 		<br />
 		<a href="https://github.com/TheV360">Github Profile</a>
 {% include footer.html %}
