--- a/404.html
+++ b/404.html
@@ -2,8 +2,10 @@
 layout: default
 
 title: 404
+
+permalink: /404.html
 ---
 <div class="container">
 	<h2>404</h2>
-	<p>e.</p>
+	<p>Yikes. If this is an important permalink or something, archive.org may have it. You can also open an issue on <a href="https://github.com/TheV360/thev360.github.io/">my GitHub page.</a></p>
 </div>
