--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 
-title: home
+title: Home
 ---
 
 			<div class="container">
@@ -17,8 +17,8 @@ title: home
 					<h3>NewerTab</h3>
 					<p>This is a fully-customizable new tab page. It has Reddit and Tumblr integration too, so you can automatically get your favorite posts as your background every time you open a tab.</p>
 					<div class="button-set">
-						<a class="buttonlike button-primary" href="https://thev360.gitlab.io/NewerTab/">Check it out!</a>
-						<a class="buttonlike" href="https://gitlab.com/TheV360/NewerTab/">See code</a>
+						<a class="buttonlike button-primary" href="https://thev360.github.io/NewerTab/">Check it out!</a>
+						<a class="buttonlike" href="https://github.com/TheV360/NewerTab/">See code</a>
 					</div>
 				</div>
 			</div>
@@ -27,8 +27,8 @@ title: home
 					<h3>Create Four</h3>
 					<p>Have you ever wanted to program for a computer whose <span title="Don't forget the three text labels that I really should've made static!">only output*</span> is a 7x6 4-color Connect Four board that defies gravity? No? Too bad, here's exactly that.</p>
 					<div class="button-set">
-							<a class="buttonlike button-primary" href="https://thev360.gitlab.io/CreateFour/">Check it out!</a>
-							<a class="buttonlike" href="https://gitlab.com/TheV360/CreateFour/">See code</a>
+							<a class="buttonlike button-primary" href="https://thev360.github.io/CreateFour/">Check it out!</a>
+							<a class="buttonlike" href="https://github.com/TheV360/CreateFour/">See code</a>
 					</div>
 				</div>
 			</div>
