Stop being jerk to self

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ title: Home
 					<img id="profile" src="/assets/ProfilePicture.jpg" />
 				</div>
 				<h2>Hello, world!</h2>
-				<p>I'm V360, a person that has no idea what they're doing with their life.</p>
-				<p>Here's a few things I made:</p>
+				<p>I'm V360, a person that has no idea what they're doing. I make stuff in HTML5, SmileBASIC, PICO-8, C#, and Love2D.</p>
+				<p>Here's a few of my favorite creations:</p>
 			</div>
 			<div class="showcase" style="background-image: url('/assets/NewerTab.png');">
 				<div class="showcase-content">
