--- a/404.html
+++ b/404.html
@@ -1,11 +1,16 @@
 ---
-layout: default
+layout: 404
 
-title: 404
+title: 404 Error
 
 permalink: /404.html
 ---
 <div class="container">
-	<h2>404</h2>
-	<p>Yikes. If this is an important permalink or something, archive.org may have it. You can also open an issue on <a href="https://github.com/TheV360/thev360.github.io/">my GitHub page.</a></p>
+	<div id="bwbox">
+		<h1>404</h1>
+		<h2>Error!</h2>
+		<h3>Error!</h3>
+		<p>oh no, that is horrible</p>
+	</div>
+	<p>Yikes. If this is an important permalink or something, archive.org may have it. You can also open an issue on <a href="https://github.com/TheV360/thev360.github.io/">my GitHub page,</a> or just <p><a href="/">Click here</a> to return to the homepage.</p></p>
 </div>
