--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@ title: Home
 					</div>
 				</div>
 			</div>
+			<div class="showcase" style="background-image: url('/assets/Love2DSmileBASICLibrary.png');">
+				<div class="showcase-content">
+					<h3>Love2D SmileBASIC Library</h3>
+					<p>Ever wanted to port over some games or applications from SmileBASIC, but didn't know where to start? This is a small helper library that provides numerous tools to help you do just that! Make sprites, backgrounds, text screens, and animations with ease!</p>
+					<div class="button-set">
+							<a class="buttonlike button-primary" href="https://github.com/TheV360/Love2DSmileBASICLibrary/">Check out the code!</a>
+							<a class="buttonlike" href="https://thev360.github.io/Love2DSmileBASICLibrary/">See docs</a>
+					</div>
+				</div>
+			</div>
 			<div class="container">
 				<h2>Social Media</h2>
 				<ul class="grid2">
