--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
 				<p>I'm V360, a person that has no idea what they're doing. I make stuff in HTML5, SmileBASIC, PICO-8, C#, and Love2D.</p>
 				<p>Here's a few of my favorite creations:</p>
 			</div>
-			<div class="showcase" style="background-image: url('/assets/NewerTab.png');">
+			<div class="showcase" style="background-image: url('/assets/NewerTab.jpg');">
 				<div class="showcase-content">
 					<h3>NewerTab</h3>
 					<p>This is a fully-customizable new tab page. It has Reddit and Tumblr integration too, so you can automatically get your favorite posts as your background every time you open a tab.</p>
@@ -22,7 +22,7 @@ title: Home
 					</div>
 				</div>
 			</div>
-			<div class="showcase" style="background-image: url('/assets/CreateFour.png');">
+			<div class="showcase" style="background-image: url('/assets/CreateFour.jpg');">
 				<div class="showcase-content">
 					<h3>Create Four</h3>
 					<p>Have you ever wanted to program for a computer whose <span title="Don't forget the three text labels that I really should've made static!">only output*</span> is a 7x6 4-color Connect Four board that defies gravity? No? Too bad, here's exactly that.</p>
