--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@ layout: home
 title: Home
 ---
 
-			<div class="container">
-				<div id="profile-container">
-					<img id="profile" src="/assets/ProfilePicture.jpg" />
+			<div class="superhero">
+				<div class="superhero-content">
+					<div id="profile-container">
+						<img id="profile" src="/assets/ProfilePicture.jpg" />
+					</div>
+					<h2>Hello, world!</h2>
+					<p>I'm V360, a person that has no idea what they're doing. I make stuff in HTML5, SmileBASIC, PICO-8, C#, and Love2D.</p>
+					<p>Here's a few of my favorite creations:</p>
 				</div>
-				<h2>Hello, world!</h2>
-				<p>I'm V360, a person that has no idea what they're doing. I make stuff in HTML5, SmileBASIC, PICO-8, C#, and Love2D.</p>
-				<p>Here's a few of my favorite creations:</p>
+				<div class="superhero-background" style="background-image: url('/assets/Banner.jpg');"></div>
 			</div>
 			<div class="showcase" style="background-image: url('/assets/NewerTab.jpg');">
 				<div class="showcase-content">
