Linked itch.io, for future plans

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@ title: Home
 			</div>
 			<div class="container">
 				<h2>Social Media</h2>
-				<ul class="grid2">
+				<ul>
 					<li><a href="https://twitter.com/TheV360gameDev">Twitter</a><span class="unimportant"> &ndash; @TheV360gameDev</span></li>
 					<li><a href="https://reddit.com/u/TheV360">Reddit</a><span class="unimportant"> &ndash; /u/TheV360</span></li>
 					<li><a href="https://github.com/TheV360">GitHub</a><span class="unimportant"> &ndash; @TheV360</span></li>
 					<li><a href="https://gitlab.com/TheV360">GitLab</a><span class="unimportant"> &ndash; @TheV360</span></li>
+					<li><a href="https://v360.itch.io/">Itch.io</a><span class="unimportant"> &ndash; @V360</span></li>
 				</ul>
 			</div>
