--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@ layout: home
 title: Home
 ---
 
-			<div id="superhero" style="background-image: url('/assets/Banner.jpg');">
+			<div id="superhero">
 				<div id="profile-container">
 					<img id="profile" src="/assets/ProfilePicture.jpg" />
 				</div>
 				<h2>Hello, world!</h2>
 				<p>I'm V360, a person that has no idea what they're doing. I make stuff in HTML5, SmileBASIC, PICO-8, C#, and Love2D.</p>
+				<div class="button-set">
+					<a class="buttonlike button-primary" href="https://thev360.github.io/blog/">Check out my blog!</a>
+					<a class="buttonlike" href="#projects">Or check out my projects!</a>
+				</div>
 			</div>
-			<div class="showcase" style="background-image: url('/assets/NewerTab.jpg');">
+			<div id="projects" class="showcase" style="background-image: url('/assets/NewerTab.jpg');">
 				<div class="showcase-content">
 					<h3>NewerTab</h3>
 					<p>This is a fully-customizable new tab page. It has Reddit and Tumblr integration too, so you can automatically get your favorite posts as your background every time you open a tab.</p>
