The issue was that Firefox is horrible

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
 				<p>I'm V360, a person that has no idea what they're doing. I make stuff in HTML5, SmileBASIC, PICO-8, C#, and Love2D.</p>
 				<div class="button-set">
 					<a class="buttonlike button-primary" href="https://thev360.github.io/blog/">Check out my blog!</a>
-					<a id="projectsButton" class="buttonlike" href="#">Or check out my projects!</a>
+					<a id="projectsButton" class="buttonlike" href="javascript:void(0);">Or check out my projects!</a>
 				</div>
 			</div>
 			<div class="showcase" style="background-image: url('/assets/NewerTab.jpg');">
