--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Home
 				<h1>Hello, world!</h1>
 				<p>I'm V360, a person that has no idea what they're doing. I make stuff in HTML5, SmileBASIC, PICO-8, C#, and Love2D.</p>
 				<div class="button-set">
-					<a class="buttonlike button-primary" href="https://thev360.github.io/blog/">Check out my blog!</a>
-					<a id="projectsButton" class="buttonlike" href="javascript:void(0);">Or check out my projects!</a>
+					<a class="buttonlike button-primary" href="https://thev360.github.io/blog/">Check out my Blog!</a>
+					<a id="projectsButton" class="buttonlike" href="javascript:void(0);">Check out my Projects!</a>
 				</div>
 			</div>
 			<div class="showcase" style="background-image: url('/assets/NewerTab.jpg');">
