hopefully optimized the parallax on the home page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: Home
 ---
 
 			<div id="superhero">
+				<div id="superhero-background"></div>
 				<div id="profile-container">
 					<img id="profile" src="/assets/ProfilePicture.jpg" />
 				</div>
