A few small changes

--- a/404.html
+++ b/404.html
@@ -12,5 +12,5 @@ permalink: /404.html
 		<h3>Error!</h3>
 		<p>oh no, that is horrible</p>
 	</div>
-	<p>Yikes. If this is an important permalink or something, archive.org may have it. You can also open an issue on <a href="https://github.com/TheV360/thev360.github.io/">my GitHub page,</a> or just <a href="/">Click here</a> to return to the homepage.</p>
+	<p>Yikes. If this is an important permalink or something, archive.org may have it. You can also open an issue on <a href="https://github.com/TheV360/thev360.github.io/">my GitHub page,</a> or just <a href="/">click here</a> to return to the home page.</p>
 </div>
