--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
 				<h1>Hello, world!</h1>
 				<p>I'm V360, a person that has no idea what they're doing. I make stuff in HTML5, SmileBASIC, PICO-8, C#, and Love2D.</p>
 				<div class="button-set">
-					<a class="buttonlike button-primary" href="https://thev360.github.io/blog/">Check out my Blog!</a>
+					<a class="buttonlike button-primary" href="/blog/">Check out my Blog!</a>
 					<a id="projectsButton" class="buttonlike" href="javascript:void(0);">Check out my Projects!</a>
 				</div>
 			</div>
@@ -21,7 +21,7 @@ title: Home
 					<h2>NewerTab</h2>
 					<p>This is a fully-customizable new tab page. It has Reddit and Tumblr integration too, so you can automatically get your favorite posts as your background every time you open a tab.</p>
 					<div class="button-set">
-						<a class="buttonlike button-primary" href="https://thev360.github.io/NewerTab/">Check it out!</a>
+						<a class="buttonlike button-primary" href="/NewerTab/">Check it out!</a>
 						<a class="buttonlike" href="https://github.com/TheV360/NewerTab/">See code</a>
 					</div>
 				</div>
@@ -31,7 +31,7 @@ title: Home
 					<h2>Create Four</h2>
 					<p>Have you ever wanted to program for a computer whose <span title="Don't forget the three text labels that I really should've made static!">only output*</span> is a 7x6 4-color Connect Four board that defies gravity? No? Too bad, here's exactly that.</p>
 					<div class="button-set">
-							<a class="buttonlike button-primary" href="https://thev360.github.io/CreateFour/">Check it out!</a>
+							<a class="buttonlike button-primary" href="/CreateFour/">Check it out!</a>
 							<a class="buttonlike" href="https://github.com/TheV360/CreateFour/">See code</a>
 					</div>
 				</div>
@@ -49,7 +49,7 @@ title: Home
 			<div class="container">
 				<h1>Social Media</h1>
 				<ul>
-					<li><a href="https://twitter.com/TheV360gameDev">Twitter</a><span class="unimportant"> &ndash; @TheV360gameDev</span></li>
+					<li><a href="https://twitter.com/V360dev">Twitter</a><span class="unimportant"> &ndash; @V360dev</span></li>
 					<li><a href="https://reddit.com/u/TheV360">Reddit</a><span class="unimportant"> &ndash; /u/TheV360</span></li>
 					<li><a href="https://github.com/TheV360">GitHub</a><span class="unimportant"> &ndash; @TheV360</span></li>
 					<li><a href="https://gitlab.com/TheV360">GitLab</a><span class="unimportant"> &ndash; @TheV360</span></li>
