The site is good now

--- a/index.html
+++ b/index.html
@@ -26,13 +26,23 @@ title: Home
 					</div>
 				</div>
 			</div>
+			<!--<div class="showcase" style="background-image: url('/assets/Graph2.png');">
+				<div class="showcase-content">
+					<h2>Arduboy Graph 2</h2>
+					<p>Have you ever wanted to do your math homework on a Game Boy? Me neither. Despite that, here's a graphing calculator for the Arduboy!</p>
+					<div class="button-set">
+						<a class="buttonlike button-primary" href="/Graph2/">Check it out!</a>
+						<a class="buttonlike" href="https://github.com/TheV360/ArduboyGraph2/">See code</a>
+					</div>
+				</div>
+			</div>-->
 			<div class="showcase" style="background-image: url('/assets/CreateFour.jpg');">
 				<div class="showcase-content">
 					<h2>Create Four</h2>
 					<p>Have you ever wanted to program for a computer whose <span title="Don't forget the three text labels that I really should've made static!">only output*</span> is a 7x6 4-color Connect Four board that defies gravity? No? Too bad, here's exactly that.</p>
 					<div class="button-set">
-							<a class="buttonlike button-primary" href="/CreateFour/">Check it out!</a>
-							<a class="buttonlike" href="https://github.com/TheV360/CreateFour/">See code</a>
+						<a class="buttonlike button-primary" href="/CreateFour/">Check it out!</a>
+						<a class="buttonlike" href="https://github.com/TheV360/CreateFour/">See code</a>
 					</div>
 				</div>
 			</div>
@@ -50,9 +60,7 @@ title: Home
 				<h1>Social Media</h1>
 				<ul>
 					<li><a href="https://twitter.com/V360dev">Twitter</a><span class="unimportant"> &ndash; @V360dev</span></li>
-					<li><a href="https://reddit.com/u/TheV360">Reddit</a><span class="unimportant"> &ndash; /u/TheV360</span></li>
 					<li><a href="https://github.com/TheV360">GitHub</a><span class="unimportant"> &ndash; @TheV360</span></li>
-					<li><a href="https://gitlab.com/TheV360">GitLab</a><span class="unimportant"> &ndash; @TheV360</span></li>
 					<li><a href="https://v360.itch.io/">Itch.io</a><span class="unimportant"> &ndash; @V360</span></li>
 				</ul>
 			</div>
